--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@vue/composition-api": "^1.4.4",
+    "@vuelidate/core": "^2.0.0-alpha.34",
+    "@vuelidate/validators": "^2.0.0-alpha.26",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "sass": "^1.48.0",
     "sass-loader": "^10",
+    "tailwindcss-autofill": "^0.1.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
