--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^10",
     "tailwindcss-autofill": "^0.1.0",
     "vue": "^2.6.14",
+    "vue-hotjar": "^1.4.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
